--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./bin/www",
     "dec": "nodemon app.js"
   },
   "dependencies": {
