--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "restapi",
     "builds": [
         {
-            "src": "app.js",
+            "src": "./bin/www",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app.js"
+            "dest": "./bin/www"
         }
     ]
 }
