--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   
   "scripts": {
     "start": "node ./bin/www",
-    "dec": "nodemon app.js"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
